styles/style.css
*{
    padding: 0;
    margin: 0;
    font-family: Roboto, sans-serif;
}

section{
    
    min-height: 100vh;
}
a{
    text-decoration: none;
    color: black;
}
button, .call{
    background-color: #3882F6;
}
button{
    border-style: none;
    border-radius: 5px;
    text-align: center;
    width: 110px;
    height: 30px;
}
ul{
    list-style: none;
    display: flex;
    gap: 12px;
    font-size: 18px; 
}
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    margin-bottom: 5px;
}
/*g of gray*/
.gtext{
    color: #c7c9cc;
}
/*w of white*/
.wtext{
    color: #F9FAF8;
}
.header .logo-text{
    font-size: 24px;
    font-weight: bold;
}
.welcome h2{
    font-size: 38px;
}
.content{
    display: flex;
    gap: 20px;
    align-items: center;
    margin: 30px;
    justify-content: center;
    flex-wrap: wrap;
    padding: 10px;
}
.welcome{
    width: 300px;
    flex-grow: 2;
    flex-shrink: 1;
    display: flex;
    flex-direction: column;
    gap: 10px; 
}
.home-image{
    width: 400px;
    height: 300px;
    background-color: transparent;
    border-radius: 2px;
    display: flex;
    min-width: 0;
    justify-content: center;
}
#perf-image{
    border-radius: 10%;
    border: thin solid #3882F6;
    min-width: 0;
}
.home-footer{
    align-self: center;
    margin-top: auto;
    margin-bottom: 20px;
}
.main{
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.info-container{
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
    margin-left: 10px;
    margin-right: 10px;
    justify-content: center;
    margin-bottom: 20px;
}
.section-title{
    margin-bottom: 50px;
    font-size: 28px;
    font-weight: bold;
    margin-top: 20px;
}
.box{
    width: 200px;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 2px;
}
.box-image{
    width: 200px;
    height: 200px;
    border: 5px solid #3882F6;
    border-radius: 8px;
    overflow: hidden;
}
.section-title h2, .box p{
    color: #1F2937;
}
#hero{
    background-color: #1F2937;
    display: flex;
    flex-direction: column;
}
#history{
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
#history .section-title{
    text-align: center;
}

.call{
    display: flex;
    gap: 30px;
    align-items: center;
    justify-content: center;
    margin: 60px;
    flex-wrap: wrap;
    padding: 50px;
    border-radius: 10px; 
}
.footer{
    padding: 25px;
    background-color: #1F2937;
    width: 98vw;
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: flex-end;
    margin-top: auto;
    gap: 20px;
    flex-wrap: wrap;
}
.call .call-button button{ 
    border: 2px solid #F9FAF8;
}
#big-p{
    font-size: 25px;
    font-weight: bold;
}

